Improve language file

--- a/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
+++ b/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
@@ -1,9 +1,12 @@
 [Configuration]
 PLG_FILESYSTEM_S3_CONFIG_CONNECTIONS_LABEL="Connections"
 
+PLG_FILESYSTEM_S3_CONFIG_LABEL_LABEL="Name"
+PLG_FILESYSTEM_S3_CONFIG_LABEL_DESC="This appears in the Media Manager's sidebar"
+
 PLG_FILESYSTEM_S3_CONFIG_TYPE_LABEL="Connection type"
 PLG_FILESYSTEM_S3_CONFIG_TYPE_S3="Amazon S3"
-PLG_FILESYSTEM_S3_CONFIG_TYPE_CLOUDFRONT="CloudFront (backed by Amazon S3)"
+PLG_FILESYSTEM_S3_CONFIG_TYPE_CLOUDFRONT="Amazon CloudFront"
 PLG_FILESYSTEM_S3_CONFIG_TYPE_CUSTOM="Custom S3–compatible storage provider"
 
 PLG_FILESYSTEM_S3_CONFIG_CUSTOMENDPOINT_LABEL="Custom Endpoint (URL)"
@@ -21,7 +24,7 @@ PLG_FILESYSTEM_S3_CONFIG_DUALSTACK_DESC="Should we use the DualStack endpoint UR
 PLG_FILESYSTEM_S3_CONFIG_BUCKET_LABEL="Bucket"
 
 PLG_FILESYSTEM_S3_CONFIG_SIGNATURE_LABEL="Signature Method"
-PLG_FILESYSTEM_S3_CONFIG_SIGNATURE_V2="V2 (legacy)
+PLG_FILESYSTEM_S3_CONFIG_SIGNATURE_V2="V2 (legacy)"
 PLG_FILESYSTEM_S3_CONFIG_SIGNATURE_V4="V4 (recommended)"
 
 PLG_FILESYSTEM_S3_CONFIG_REGION_LABEL="Region"
@@ -59,7 +62,7 @@ PLG_FILESYSTEM_S3_CONFIG_PATHACCESS_VIRTUALHOST="Virtual Hosting (recommended)"
 PLG_FILESYSTEM_S3_CONFIG_DIRECTORY_LABEL="Directory"
 
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_LABEL="Storage Class"
-PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_DESC="The Amazon S3 Storage Class for the files you upload. DANGER! Using Glacier or Glacier Deep Archive is incompatible with retrieving the files in the timely manner required for use with Media Manager."
+PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_DESC="Determines the Amazon S3 storage class for files uploaded <em>after</em> you change this setting. If unsure, select Standard."
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_STANDARD="Standard (recommended)"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_REDUCED_REDUNDANCY="Reduced Redundancy"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_STANDARD_IA="Standard – Infrequent Access"
