Advanced image preview options

--- a/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
+++ b/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
@@ -1,4 +1,8 @@
-[Configuration]
+[Configuration.Common]
+PLG_FILESYSTEM_S3_FIELDSET_ADVANCED_LABEL="Advanced"
+PLG_FILESYSTEM_S3_FIELDSET_ADVANCED_DESC="Options for <strong>expert</strong> users. Don't change these options unless you know what you are doing, you can accept full responsibility for your actions and can fix what you break on your own."
+
+[Configuration.Basic]
 PLG_FILESYSTEM_S3_CONFIG_CONNECTIONS_LABEL="Connections"
 
 PLG_FILESYSTEM_S3_CONFIG_LABEL_LABEL="Name"
@@ -70,6 +74,22 @@ PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_ONEZONE_IA="One Zone – Infrequent Acces
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_INTELLIGENT_TIERING="Intelligent Tiering"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_GLACIER="Glacier (DANGER!)"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_DEEP_ARCHIVE="Glacier Deep Archive (DANGER!)"
+
+[Configuration.Advanced]
+PLG_FILESYSTEM_S3_CONFIG_PREVIEW_LABEL="Image Preview"
+PLG_FILESYSTEM_S3_CONFIG_PREVIEW_DESC="When should I display image previews? <strong>WARNING! THIS MAY BE COSTLY!</strong> Enabling previews on S3 buckets without a CloudFront distribution may incur very increased costs since all images in a folder must be loaded from Amazon S3 every time you view that folder in the Media Manager."
+PLG_FILESYSTEM_S3_CONFIG_PREVIEW_NEVER="Disabled"
+PLG_FILESYSTEM_S3_CONFIG_PREVIEW_CLOUDFRONT="CloudFront only"
+PLG_FILESYSTEM_S3_CONFIG_PREVIEW_ALWAYS="Always"
+
+PLG_FILESYSTEM_S3_CONFIG_PREVIEWEXTENSIONS_LABEL="Preview extensions"
+PLG_FILESYSTEM_S3_CONFIG_PREVIEWEXTENSIONS_DESC="A comma–separated list of file extensions (without leading dots) which will be previewed in the Media Manager for S3/CloudFront connections, e.g. <code>png,gif,jpg,jpeg,bmp,webp,pdf,svg</code>. Leave blank to use Media Manager's default list."
+
+PLG_FILESYSTEM_S3_CONFIG_LAMBDARESIZE_LABEL="Use Lambda@Edge resize"
+PLG_FILESYSTEM_S3_CONFIG_LAMBDARESIZE_DESC="Should I resize images hosted on CloudFront dynamically using Lambda@Edge for previewing them? Please read the documentation, this is for expert users <strong>only</strong>"
+
+PLG_FILESYSTEM_S3_CONFIG_RESIZEDIMENSION_LABEL="Resize dimension (px)"
+PLG_FILESYSTEM_S3_CONFIG_RESIZEDIMENSION_DESC="The dimension in pixels to ask Lambda@Edge to resize preview images. The default is 100 which results in 100x100 pixel preview images which is perfectly fine for Joomla 4 Media Manager running on 96ppi (normal DPI) monitors. If you are going to use HiDPI monitors you may want to increase this."
 
 [Runtime]
 PLG_FILESYSTEM_S3_DEFAULT_NAME="Amazon S3"
