# [LOW] PHP 8 warning

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Amazon S3 Filesystem for Joomla 1.0.1
+================================================================================
+# [LOW] PHP 8 warning
+
 Amazon S3 Filesystem for Joomla 1.0.0
 ================================================================================
 + Initial release
