--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Amazon S3 Filesystem for Joomla 1.0.1
 ================================================================================
+# [HIGH] Some S3 buckets may return directories with an empty name, breaking Media manager
 # [LOW] PHP 8 warning
 
 Amazon S3 Filesystem for Joomla 1.0.0
