--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Amazon S3 Filesystem for Joomla 1.0.1
 ================================================================================
 # [HIGH] Some S3 buckets may return directories with an empty name, breaking Media manager
 # [HIGH] Clicking the sidebar folder names leads to an error
+# [MEDIUM] No image previews when using straight up S3 (instead of CloudFront)
 # [LOW] PHP 8 warning
 # [LOW] PHP 8 deprecated notice
 
