--- a/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
+++ b/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
@@ -91,6 +91,9 @@ PLG_FILESYSTEM_S3_CONFIG_LAMBDARESIZE_DESC="Should I resize images hosted on Clo
 PLG_FILESYSTEM_S3_CONFIG_CACHE_THUMBNAILS_LABEL="Cache Thumbnails"
 PLG_FILESYSTEM_S3_CONFIG_CACHE_THUMBNAILS_DESC="Should I create thumbnails locally and cache them in the <code>media/plg_filesystem_s3/cache</code> directory? <strong>Warning!</strong> This will increase your server load the first few times you visit a folder with big or lots of images."
 
+PLG_FILESYSTEM_S3_CONFIG_MAX_THUMBNAIL_TIME_LABEL="Maximum Time Creating Thumbnails (seconds)"
+PLG_FILESYSTEM_S3_CONFIG_MAX_THUMBNAIL_TIME_DESC="The maximum time which will be spent creating thumbnails in seconds, measured from approximately the start of the page load. Recommended values: 5 to 15 seconds. Accepted range: 1 to 120 seconds."
+
 PLG_FILESYSTEM_S3_CONFIG_RESIZEDIMENSION_LABEL="Resize dimension (px)"
 PLG_FILESYSTEM_S3_CONFIG_RESIZEDIMENSION_DESC="The dimension in pixels to ask Lambda@Edge to resize preview images. The default is 100 which results in 100x100 pixel preview images which is perfectly fine for Joomla 4 Media Manager running on 96ppi (normal DPI) monitors. If you are going to use HiDPI monitors you may want to increase this."
 
