+ Local caching of Amazon S3 file operations
Per-connection caching options

--- a/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
+++ b/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
@@ -75,6 +75,12 @@ PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_INTELLIGENT_TIERING="Intelligent Tiering"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_GLACIER="Glacier (DANGER!)"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_DEEP_ARCHIVE="Glacier Deep Archive (DANGER!)"
 
+PLG_FILESYSTEM_S3_CONFIG_CACHING_LABEL="Request caching"
+PLG_FILESYSTEM_S3_CONFIG_CACHING_DESC="Cache the directory listing requests to the Amazon S3 API to speed up the Media Manager display. However, any changes made outside of this site's Media Manager will not be reflected until the cache time lapses."
+
+PLG_FILESYSTEM_S3_CACHE_TIME_LABEL="Requests caching time"
+PLG_FILESYSTEM_S3_CACHE_TIME_DESC="The maximum time to cache requests to the Amazon S3 API. Recommended values are between 30 to 300 seconds. Shorter cache times may be ineffective, longer cache times could result in changes made outside of the Media Manager of this site not appearing for a very long time, leading to confusion. Default: 300 seconds (5 minutes)."
+
 [Configuration.Advanced]
 PLG_FILESYSTEM_S3_CONFIG_PREVIEW_LABEL="Image Preview"
 PLG_FILESYSTEM_S3_CONFIG_PREVIEW_DESC="When should I display image previews? <strong>WARNING! THIS MAY BE COSTLY!</strong> Enabling previews on S3 buckets without a CloudFront distribution may incur very increased costs since all images in a folder must be loaded from Amazon S3 every time you view that folder in the Media Manager."
