Added missing S3 regions

--- a/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
+++ b/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
@@ -39,22 +39,29 @@ PLG_FILESYSTEM_S3_CONFIG_REGION_US_WEST_2="US West (Oregon)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AF_SOUTH_1="Africa (Cape Town)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_EAST_1="Asia Pacific (Hong Kong)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_SOUTH_1="Asia Pacific (Mumbai)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_AP_SOUTH_2="Asia Pacific (Hyderabad)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_NORTHEAST_1="Asia Pacific (Tokyo)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_NORTHEAST_2="Asia Pacific (Seoul)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_NORTHEAST_3="Asia Pacific (Osaka-Local)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_SOUTHEAST_1="Asia Pacific (Singapore)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_AP_SOUTHEAST_2="Asia Pacific (Sydney)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_AP_SOUTHEAST_3="Asia Pacific (Jakarta)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_AP_SOUTHEAST_4="Asia Pacific (Melbourne)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_CA_CENTRAL_1="Canada (Central)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_CN_NORTH_1="China (Beijing)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_CN_NORTHWEST_1="China (Ningxia)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_CENTRAL_1="Europe (Frankfurt)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_EU_CENTRAL_1="Europe (Zurich)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_WEST_1="Europe (Ireland)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_WEST_2="Europe (London)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_WEST_3="Europe (Paris)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_SOUTH_1="Europe (Milan)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_EU_SOUTH_2="Europe (Spain)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_NORTH_1="Europe (Stockholm)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_SA_EAST_1="South America (São Paulo)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_ME_CENTRAL_1="Middle East (UAE)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_ME_SOUTH_1="Middle East (Bahrain)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_IL_CENTRAL_1="Israel (Tel Aviv)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_CUSTOM="(custom)"
 
 PLG_FILESYSTEM_S3_CONFIG_CUSTOM_REGION_LABEL="Custom Region"
