--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Amazon S3 Filesystem for Joomla 1.1.1
+================================================================================
+# [MEDIUM] Can't use files with spaces or some special characters in their name
+
 Amazon S3 Filesystem for Joomla 1.1.0
 ================================================================================
 + Joomla 5 support
