+ Add advanced options for the S3 integration

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Amazon S3 Filesystem for Joomla 1.1.1
 ================================================================================
++ Add advanced options for the S3 integration
 # [MEDIUM] Can't use files with spaces or some special characters in their name
 # [LOW] Cannot save third party S3-compatible services' non-compliant access / secret keys
 
