--- a/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
+++ b/plugins/filesystem/s3/language/en-GB/plg_filesystem_s3.ini
@@ -13,7 +13,8 @@ PLG_FILESYSTEM_S3_CONFIG_TYPE_S3="Amazon S3"
 PLG_FILESYSTEM_S3_CONFIG_TYPE_CLOUDFRONT="Amazon CloudFront"
 PLG_FILESYSTEM_S3_CONFIG_TYPE_CUSTOM="Custom S3–compatible storage provider"
 
-PLG_FILESYSTEM_S3_CONFIG_CUSTOMENDPOINT_LABEL="Custom Endpoint (URL)"
+PLG_FILESYSTEM_S3_CONFIG_CUSTOMENDPOINT_LABEL="Custom Endpoint"
+PLG_FILESYSTEM_S3_CONFIG_CUSTOMENDPOINT_DESC="Do <em>NOT</em> include <code>http://</code> or <code>https://</code>. For example: <code>s3.example.com</code>, <code>example.net/s3/endpoint.php</code>"
 
 PLG_FILESYSTEM_S3_CONFIG_ACCESSKEY_LABEL="Access Key"
 
@@ -51,7 +52,7 @@ PLG_FILESYSTEM_S3_CONFIG_REGION_CA_CENTRAL_1="Canada (Central)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_CN_NORTH_1="China (Beijing)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_CN_NORTHWEST_1="China (Ningxia)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_CENTRAL_1="Europe (Frankfurt)"
-PLG_FILESYSTEM_S3_CONFIG_REGION_EU_CENTRAL_1="Europe (Zurich)"
+PLG_FILESYSTEM_S3_CONFIG_REGION_EU_CENTRAL_2="Europe (Zurich)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_WEST_1="Europe (Ireland)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_WEST_2="Europe (London)"
 PLG_FILESYSTEM_S3_CONFIG_REGION_EU_WEST_3="Europe (Paris)"
@@ -81,6 +82,12 @@ PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_ONEZONE_IA="One Zone – Infrequent Acces
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_INTELLIGENT_TIERING="Intelligent Tiering"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_GLACIER="Glacier (DANGER!)"
 PLG_FILESYSTEM_S3_CONFIG_STORAGE_CLASS_DEEP_ARCHIVE="Glacier Deep Archive (DANGER!)"
+
+PLG_FILESYSTEM_S3_CONFIG_USEHTTPDATEHEADER_LABEL="Use HTTP Date header instead of X-Amz-Date header"
+PLG_FILESYSTEM_S3_CONFIG_USEHTTPDATEHEADER_DESC="Leave No for Amazon S3. Some third party S3-compatible services, such as DreamObjects, need this to work at all."
+
+PLG_FILESYSTEM_S3_CONFIG_PRESIGNEDBUCKETINURL_LABEL="Force bucket name in pre-signed URL"
+PLG_FILESYSTEM_S3_CONFIG_PRESIGNEDBUCKETINURL_DESC="Leave No for Amazon S3. Some third party S3-compatible services need this for pre-signed download URLs to be valid."
 
 PLG_FILESYSTEM_S3_CONFIG_CACHING_LABEL="Request caching"
 PLG_FILESYSTEM_S3_CONFIG_CACHING_DESC="Cache the directory listing requests to the Amazon S3 API to speed up the Media Manager display. However, any changes made outside of this site's Media Manager will not be reflected until the cache time lapses."
